After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 649523 - media-eject icon missing 256x256 version
media-eject icon missing 256x256 version
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
3.0.x
Other All
: Normal minor
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-05-06 00:25 UTC by Evandro Giovanini
Modified: 2011-05-06 14:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot showing the icon displayed (511.10 KB, image/png)
2011-05-06 00:25 UTC, Evandro Giovanini
Details

Description Evandro Giovanini 2011-05-06 00:25:06 UTC
Created attachment 187333 [details]
Screenshot showing the icon displayed

The media-eject icon is missing a 256x256 version, so a blown-up version is shown when the eject key is pressed on certain keyboards/systems that feature one.
Comment 1 Jakub Steiner 2011-05-06 12:23:50 UTC
All OSD graphics should be using -symbolic icon theme. It seems to be true for brightness & volume, but eject is indeed not -symbolic.

Creating highres variants of action icons seems like a time not well spent.
Comment 2 Bastien Nocera 2011-05-06 14:00:04 UTC
Fixed in gnome-3-0 and master

commit 2edfcc38e2bacce5f0c161c71447e4a0b662f05a
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri May 6 14:58:49 2011 +0100

    media-keys: Use symbolic icon for Eject action
    
    https://bugzilla.gnome.org/show_bug.cgi?id=649523