media-keys: Use symbolic icon for Eject action

https://bugzilla.gnome.org/show_bug.cgi?id=649523